# PysparkRPC

./: .gitignore  Dockerfile  LICENSE  README.rst  pyproject.toml
.github/workflows/: run-tests.yml
pysparkapi/: __init__.py  api_client.py  proxy.py  server.py
pysparkrpc/: __init__.py  api_client.py  proxy.py  server.py
pysparkrpc/server/: __init__.py  capture.py  cli.py  logger.py  server.py
tests/: conftest.py  test_broadcast.py  test_caching.py  test_client.py  test_dataframe.py  test_exception.py  test_inject.py  test_java_object.py  test_ml_classification.py  test_ml_clustering.py  test_ml_fpm.py  test_pysparkapi.py  test_rdd.py  test_server.py  test_udf.py  tset_pysparkrpc.py
