[tool.poetry]
name = "PysparkRPC"
version = "0.1.0"
description = "Seamlessly run Pyspark code on remote clusters."
authors = ["Adam Bronte <adam@bronte.me>"]
repository = "https://github.com/abronte/PysparkRPC"
readme = "README.rst"
license = "MIT"

[tool.poetry.scripts]
pysparkrpc = "pysparkrpc.server.cli:main"

[tool.poetry.dependencies]
python = ">=3.6"
flask = "^1.1.2"
cloudpickle = "^1.5.0"
httpx = "^0.13.3"
findspark = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/abronte/PysparkRPC/issues"
